# mcp-client

./: .env.example  .gitignore  README.md  backend.py  backend2.py  frontend.py  frontend2.py  pyproject.toml
